Target JDK 8 instead of JDK 11